styles.css
html {
    font-family: sans-serif;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

body {
    color: #fff;
    font-family: Graphik, sans-serif;
    line-height: 1.33;
    background-color: #5c83d2;
    font-size: 16px;
    margin: 0;
    letter-spacing: -0.02rem;
    padding: 0;
}

::selection {
  color: black;
  background: #F7D881;
}


.cursor-neresize {
    cursor: ne-resize;
}

#logo-container {
    display: inline-block;
    position: fixed;
    transition: 0.3s;
    margin-left: 24px;
    padding-top: 4%;
    padding-left: 8%;
    margin-top: -12%;
}

/* Positions section start*/

.row {
    display: flex;
    width: 100%;
    margin-bottom: 32px;
}

.row:last-child {
    margin-bottom: 0;
}

.title {
    flex-basis: 50%;
    display: flex;
}

.title-content {
    margin-right: 4px;
}

.place {
    flex-basis: 50%;
    display: flex;
    justify-content: flex-end;
}

.place-content {
    margin-left: 4px;
}

.at {
    color: #ADC1E9;
    margin-left: 2px;
    margin-right: 2px;
}

.start::before {
    content: "";
    flex: 1;
    background-image: radial-gradient(circle, #ADC1E9 1px, transparent 1px, transparent 2px);
    background-position: bottom;
    background-size: 6px 2px;
    background-repeat: space no-repeat;
    transform: translateY(-4px);
}

.end::after {
    content: "";
    flex: 1;
    background-image: radial-gradient(circle, #ADC1E9 1px, transparent 1px, transparent 2px);
    background-position: bottom;
    background-size: 6px 2px;
    background-repeat: space no-repeat;
    transform: translateY(-4px);
}

/* Positions section end */

.container {
    margin-left: auto;
    margin-right: auto;
}

.vflex {
    flex-direction: column;
    display: flex;
}

.hflex {
    flex-direction: row;
    display: flex;
    align-items: baseline;
}


a {
    color: white;
    text-decoration: none;

}

li {
    padding-bottom: 10px;
}


ul {
    margin: 0;
}

p {
    margin: 0px;
    margin-bottom: 12px;
}


.underline {
    text-decoration: underline;
    text-decoration-style: dotted;
    color:white;
}

.secondary-text {
    color: #ADC1E9;
}

.indent {
    margin-right: 24px;
}

.content {
    width: 600px;
    grid-row-gap: 64px;
    flex-direction: column;
    margin-top: 12%;
    margin-left: auto;
    margin-right: auto;
    display: flex;
}

h1 {
    overflow-wrap: normal;
    margin-top: 0;
    font-size: 25px;
    font-weight: 400;
    letter-spacing: -0.03rem;
}


.list {
    padding-bottom: 0;
    padding-left: 0;
}

.divider {
    width: 100%;
    height: 2px;
    min-height: 2px;
    object-fit: fill;
    background-color: rgba(255, 255, 255, 0.3);
    order: -1;
}

.footer {
    flex-direction: column;
    align-items: flex-start;
    display: flex;
    grid-row-gap: 24px;
    margin-bottom: 80px;
}

.footer-content {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    justify-content: space-between;
    width: 100%;
    align-self: flex-end;
}

#ty {
    align-self: last baseline;
}

.nobotmargin {
    margin-bottom: 0;

}

.end-element {
    margin-bottom: 80px;
}

.first-element {
    margin-top: -40px;
}

.film-photo {
    border: 12px solid white;
    display: inline-block;
}

.image-border {
    border: 12px solid white;
    display: inline-block;
}

img {
    width: 100%;
    margin: 0;
    padding: 0;
    vertical-align: middle;
    display: block;
}

.vcaption-left {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 4px;
}

.vcaption-right {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 4px;
    text-align: right;
}

.hcaption-left {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    align-items: last baseline;
    gap: 8px;
    text-align: right;
}

.hcaption-right {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    align-items: last baseline;
    gap: 8px;
}

.top-align {
    align-items: flex-start;
}

.left-align {
    align-self: flex-start;
    justify-content: flex-start;
}

.right-align {
    justify-content: flex-end;
    align-self: flex-end;
}

.center-align {
    justify-content: center;
    align-self: center;
}

#miro {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 24px;
}

#folders {
    display: flex;
    flex-direction: column;
    gap: 24px;
}

#syorb {
    gap: 24px;
}

.onethird {
    width: 296px;
}

.twothirds {
    width: 448px;
}

.navbar {
    grid-row-gap: 24px;
    flex-direction: column;
    flex: 0 auto;
    margin-left: 8%;
    display: flex;
    position: fixed;
}

.nav-link {
    color: white;
    text-decoration: none;
    margin-left: 24px;
}

.video-mobile {
    width: 50%;
}

.selected {
    display: flex;
    flex-direction: row;
    grid-row-gap: 8px;
    grid-column-gap: 8px;
    align-items: flex-start;
    color: white;
    text-decoration: none;
    font-weight: 700;
    margin: 0;
}

.svg-container {
    width: 16px;
    height: 16px;
    display: inline-block;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
    border-radius: 8px;
}

#rotating-svg {
    animation: rotate 1.5s linear infinite;
}

@keyframes rotate {
    0% {
    transform: rotate(0deg);
  }
    100% {
    transform: rotate(360deg);
  }
}

#ampelmann {
    grid-column-gap: 40px;
    align-items: center;
    flex-direction: row;
    display: flex;
}

.flex-item {
    flex-shrink: 1;
}

#ampelmann-svg {
    flex-shrink: 0;
    width: 85px;
}


/* mobilka */
@media (max-width: 768px) {

html {
    margin: 0;
    padding: 0;
}

body {
    margin: 0;
    padding: 0 16px 0;
    font-size: 18px;
}

header {
    position: fixed;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 16px 16px;
    right: 0;
    left: 0;
    background-color: #5c83d2;

}

.navbar {
    display: flex;
    flex-direction: row;
    gap: 24px;
    margin: 0;
    position: relative;
}

#logo-container {
    margin: 0;
    padding: 0;
    position: relative;
}


a {
    color: white;
    text-decoration: none;

}

.nav-link {
    margin: 0;
}

#home {
    display: none;
}

.mobile-selected {
    font-weight: 700;
}

.content {
    width: auto;
    padding-top: 40%;
    margin: 0;
}

.list {
    padding-left: 16px;
}

.footer-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 8px;
}

.hcaption-left {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.hcaption-right {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.onethird {
    width: 100%;
}

.twothirds {
    width: 100%;
}

.film-photo {
    border: 8px solid white;
}

.full-mobile {
    box-sizing: border-box;
    padding: 0;
    width: 100%;
}

.mobile-reverse {
    flex-direction: column-reverse;
}

.indent {
    margin-right: 16px;
}

.underline {
    text-decoration: underline;
    text-decoration-style: dotted;
    color:white;
}

#ampelmann-svg {
    display: none;
}

.svg-container {
    display: none;
}

.video-mobile {
    width: 100%;
}

}

